[project]
name = "isaacus-haystack"
version = "0.1.0"
description = "Kanon 2 (Isaacus) embedders for Haystack"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Isaacus"}]
dependencies = [
  "haystack-ai>=2.14.0",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://haystack.deepset.ai/integrations"
Documentation = "https://docs.isaacus.com/capabilities/embedding"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haystack_integrations"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "UP", "B", "PL"]

[tool.mypy]
ignore_missing_imports = true

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "haystack-ai>=2.14.0",
  "requests>=2.31.0",
]

[tool.hatch.envs.test.scripts]
all = "pytest -q"
