[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haystack_integrations"]

[tool.hatch.version]
source = "vcs"
tag-pattern = 'integrations\/kreuzberg-v(?P<version>.*)'

[tool.hatch.version.raw-options]
root = "../.."
git_describe_command = 'git describe --tags --match="integrations/kreuzberg-v[0-9]*"'

[project]
name = "kreuzberg-haystack"
dynamic = ["version"]
description = "Kreuzberg document converter for Haystack"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["haystack", "kreuzberg", "document-conversion", "pdf", "ocr"]
authors = [{ name = "deepset GmbH", email = "info@deepset.ai" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "haystack-ai>=2.22.0",
    "kreuzberg>=4.4.6",
]

[project.urls]
Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/kreuzberg#readme"
Issues = "https://github.com/deepset-ai/haystack-core-integrations/issues"
Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/kreuzberg"

[tool.hatch.envs.default]
installer = "uv"
dependencies = ["haystack-pydoc-tools", "ruff"]

[tool.hatch.envs.default.scripts]
docs = ["haystack-pydoc pydoc/config_docusaurus.yml"]
fmt = "ruff check --fix {args}; ruff format {args}"
fmt-check = "ruff check {args} && ruff format --check {args}"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-rerunfailures",
    "mypy",
    "pip",
]

[tool.hatch.envs.test.scripts]
unit = 'pytest -m "not integration" {args:tests}'
integration = 'pytest -m "integration" {args:tests}'
all = 'pytest {args:tests}'
unit-cov-retry = 'pytest --cov=haystack_integrations --reruns 3 --reruns-delay 30 -x -m "not integration" {args:tests}'
integration-cov-retry = 'pytest --cov=haystack_integrations --cov-append --reruns 3 --reruns-delay 30 -x -m "integration" {args:tests}'
types = "mypy -p haystack_integrations.components.converters.kreuzberg {args}"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D205",   # 1 blank line required between summary line and description
    "D209",   # Closing triple quotes go to new line
    "D213",   # summary lines must be positioned on the second physical line of the docstring
    "D417",   # Missing argument descriptions in the docstring
    "D419",   # Docstring is empty
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle (error)
    "EM",   # flake8-errmsg
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "N",    # pep8-naming
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLR",  # pylint refactor
    "PLW",  # pylint warning
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit
    "T",    # flake8-print
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle (warning)
    "YTT",  # flake8-2020
]
ignore = [
    # Allow Any - used legitimately for dynamic types and SDK boundaries
    "ANN401",
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow function calls in argument defaults (common Haystack pattern for Secret.from_env_var)
    "B008",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Allow assertion in non-test code
    "S101",
]
unfixable = [
    # Don't auto-remove unused imports — protects re-exports in __init__.py
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["haystack_integrations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["D", "ANN", "PLR2004", "S101", "S108", "TID252"]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = ["kreuzberg", "kreuzberg.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "integration: integration tests",
]
log_cli = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["haystack_integrations"]
branch = true
parallel = false
relative_files = true

[tool.coverage.report]
omit = ["*/tests/*", "*/__init__.py"]
show_missing = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
